# gnina

./: .cproject  .gitignore  .project  CITATION.cff  CMakeLists.txt  README  README.md
.externalToolBuilders/: Make.launch  org.eclipse.cdt.managedbuilder.core.genmakebuilder.launch
.github/: ISSUE_TEMPLATE.md
.github/workflows/: CI.yml  Coverage.yml
caffe/: CMakeLists.txt  Makefile.config.example
caffe/cmake/: Cuda.cmake  Dependencies.cmake  Misc.cmake  Summary.cmake  Targets.cmake
caffe/python/: CMakeLists.txt
caffe/tools/: CMakeLists.txt  caffe.cpp
cmake/: Cuda.cmake  Dependencies.cmake  version.cmake
cmake/Modules/: FindAtlas.cmake  FindCUDA.cmake  FindOpenBabel2.cmake  FindRDKit.cmake  Findlibmolgrid.cmake
docker/compat/: Dockerfile
docker/ubuntu/: Dockerfile
docker/ubuntu-18.04/: Dockerfile
docker/ubuntu-20.04/: Dockerfile
docs/: index.html
examples/: kitchensink.score
gninasrc/: CMakeLists.txt  make_model_cpp.py
gninasrc/dumpmodel/: dumpmodel.cpp
gninasrc/fromgnina/: fromgnina.cpp
gninasrc/gninadream/: gninadream.cpp  gninadream.cu  gninadream.h  loss.h
gninasrc/gninadream/test/: aa2ar_ligand.mol2  aa2ar_receptor.pdbqt  cdk2_ligand.mol2  cdk2_receptor.pdbqt  esr1_ligand.mol2  esr1_receptor.pdbqt  test_loss.cpp  test_loss.cu  test_loss.h  test_runner.cpp  test_solver.cpp  test_solver.h  test_vs.cpp  test_vs.h
gninasrc/gninagrid/: gninagrid.cpp  molgridder.cpp  molgridder.h
gninasrc/gninaserver/: CMakeLists.txt  Logger.h  MinimizationQuery.cpp  MinimizationQuery.h  QueryManager.cpp  QueryManager.h  Reorienter.h  client.py  server.cpp  server_common.h  servercmds.h
gninasrc/gninatyper/: gninatyper.cpp
gninasrc/gninavis/: cnn_visualization.cpp  cnn_visualization.hpp  gninavis.cpp
gninasrc/lib/: CMakeLists.txt  Eigen  GninaConverter.cpp  GninaConverter.h  PDBQTUtilities.cpp  PDBQTUtilities.h  array3d.h  atom.h  atom_base.h  atom_constants.cpp  atom_constants.h  atom_type.h  bfgs.cu  bfgs.h  box.cpp  box.h  brick.h  builtinscoring.cpp  builtinscoring.h  cache.cpp  cache.h  cache_gpu.cpp  cache_gpu.cu  cache_gpu.h  cnn_data.cpp  cnn_data.h  cnn_scorer.cpp  cnn_scorer.h  cnn_torch_scorer.cpp  cnn_torch_scorer.h  common.h  conf.cpp  conf.h  conf_gpu.cu  conf_gpu.h  convert_substring.h  coords.cpp  coords.h  covinfo.cpp  covinfo.h  (+103 more)
gninasrc/lib/CommandLine2/: CommandLine.cpp  CommandLine.h
gninasrc/lib/models/: README.md  all_default_to_default_1.3_1.pt  all_default_to_default_1.3_2.pt  all_default_to_default_1.3_3.pt  crossdock_default2018.pt  crossdock_default2018_1.3.pt  crossdock_default2018_1.3_1.pt  crossdock_default2018_1.3_2.pt  crossdock_default2018_1.3_3.pt  crossdock_default2018_1.3_4.pt  crossdock_default2018_1.pt  crossdock_default2018_2.pt  crossdock_default2018_3.pt  crossdock_default2018_4.pt  crossdock_default2018_KD_1.pt  crossdock_default2018_KD_2.pt  crossdock_default2018_KD_3.pt  crossdock_default2018_KD_4.pt  crossdock_default2018_KD_5.pt  default2017.pt  default2018.def  dense.def  dense.pt  dense_1.3.pt  dense_1.3_1.pt  dense_1.3_2.pt  dense_1.3_3.pt  dense_1.3_4.pt  dense_1.3_PT_KD.pt  dense_1.3_PT_KD_1.pt  dense_1.3_PT_KD_2.pt  dense_1.3_PT_KD_3.pt  dense_1.3_PT_KD_4.pt  dense_1.3_PT_KD_def2018.pt  dense_1.3_PT_KD_def2018_1.pt  dense_1.3_PT_KD_def2018_2.pt  dense_1.3_PT_KD_def2018_3.pt  dense_1.3_PT_KD_def2018_4.pt  dense_1.pt  dense_2.pt  (+27 more)
gninasrc/main/: main.cpp
gninasrc/test/: .gdb_history  .gitignore  correctness.py  parsed_args.h  speed.py  test_cache.cu  test_cache.h  test_cnn.cpp  test_cnn.cu  test_cnn.h  test_gpucode.cpp  test_gpucode.h  test_runner.cpp  test_tree.cu  test_tree.h  test_utils.h  testmultipose.py  testpeturb.py
gninasrc/test/typesfiles/: O.gninatypes  rec.molcache2  tmp.model
gninasrc/tognina/: tognina.cpp
scripts/: README.md  makeflex.py  makemodel.ipynb
src/: .cproject  .project  CMakeLists.txt
test/: CMakeLists.txt  ablk_high.sdf  ablk_low.sdf  ablk_lowmed.sdf  ablk_med.sdf  ablk_medhigh.sdf  ablk_results.sdf  cox2_high.sdf  cox2_low.sdf  cox2_lowmed.sdf  cox2_med.sdf  cox2_medhigh.sdf  cox2_results.sdf  cpu_cox2.out  cpu_esr.out  dk_cox2.out  dk_esr.out  dkoes_smina.out  esr_high.sdf  esr_low.sdf  esr_lowmed.sdf  esr_med.sdf  esr_medhigh.sdf  esr_results.sdf  esr_results1.sdf  esr_shorter.sdf  gmon.out  last_smaller_test.sdf  local_smallertest.out  me_cox2.out  me_esr.out  nvprof.out  nvvp_session  smaller_test.sdf  smina.out  test.sh
test/caffe/: .gitignore  CMakeLists.txt  test_groups.py  test_molgrid.py  test_multipose.py  test_peturb.py  testmolgrid.py  testmultipose.py
test/caffe/multifiles/: C.xyz  CC.xyz  N.xyz  O.xyz  duplicate.model  input.types  m.model  noduplicate.model
test/caffe/peturbfiles/: CC.xyz  fullrandpeturb.model  input.types  m.model  plain.model  plainpeturb.model  rand.model  randpeturb.model  rec.xyz  test.ipynb
test/caffe/typesfiles/: CC.gninatypes  N.gninatypes  grouped.types  small.types  smallaff.types
test/gnina/: CMakeLists.txt  makemodel.ipynb  test_cache.cu  test_cnn.cpp  test_cnn.py  test_flex.py  test_flexmin.py  test_gnina.py  test_gpucode.cpp  test_gpucode.h  test_min.py  test_minflex.py  test_runner.cpp  test_tree.cu  test_tree.h  test_utils.cpp  test_utils.h
test/gnina/data/: 10gs_lig.mol2  184l_ligand.sdf  1m7y_mrd_uff2.sdf  1w4o_lig.mol2  C.xyz  C1.xyz  C8bent.sdf  C8flat.xyz  CC.xyz  CC2.xyz  GSK3B_DFG_out_35-388-processed_rigid.pdbqt  flex_res_side_chain.pdbqt  lig.mol2  noelem.sdf  overlap.model  overlap.pt  overlap_smallr.model  overlap_smallr.pt  overlay.caffemodel  singletype.map
test/gninagrid/: CMakeLists.txt  compare_bin.py  compare_dx.py  compare_map.py
test/gninagrid/files/: A.xyz  C.xyz  CC.xyz  ccbin_0_lig_AliphaticCarbonXSHydrophobe.dx  ccdx_0_lig_AliphaticCarbonXSHydrophobe.dx  ccdx_0_rec_AliphaticCarbonXSHydrophobe.dx  ccgrid_0.25.29.binmap  ccgrid_0.25.36.binmap  ccmap_0_lig_AliphaticCarbonXSHydrophobe.map  ccmap_0_rec_AliphaticCarbonXSHydrophobe.map  ccrand_0_lig_AliphaticCarbonXSHydrophobe.dx  ccrand_0_rec_AliphaticCarbonXSHydrophobe.dx  lig.sdf  ligmap  recmap  usergrid.dx
tools/: caffe.cpp
(+320 files in other folders)
